testdata/baselines/reference/submodule/conformance/propertyAndFunctionWithSameName.errors.txt
propertyAndFunctionWithSameName.ts(2,5): error TS2300: Duplicate identifier 'x'.
propertyAndFunctionWithSameName.ts(2,5): error TS2300: Duplicate identifier 'x'.
propertyAndFunctionWithSameName.ts(3,5): error TS2300: Duplicate identifier 'x'.
propertyAndFunctionWithSameName.ts(3,5): error TS2300: Duplicate identifier 'x'.
propertyAndFunctionWithSameName.ts(9,5): error TS2300: Duplicate identifier 'x'.
propertyAndFunctionWithSameName.ts(9,5): error TS2300: Duplicate identifier 'x'.
propertyAndFunctionWithSameName.ts(10,5): error TS2300: Duplicate identifier 'x'.
propertyAndFunctionWithSameName.ts(10,5): error TS2300: Duplicate identifier 'x'.


==== propertyAndFunctionWithSameName.ts (8 errors) ====
    class C {
        x: number;
        ~
!!! error TS2300: Duplicate identifier 'x'.
        ~
!!! error TS2300: Duplicate identifier 'x'.
        x() { // error
        ~
!!! error TS2300: Duplicate identifier 'x'.
        ~
!!! error TS2300: Duplicate identifier 'x'.
            return 1;
        }
    }
    
    class D {
        x: number;
        ~
!!! error TS2300: Duplicate identifier 'x'.
        ~
!!! error TS2300: Duplicate identifier 'x'.
        x(v) { } // error
        ~
!!! error TS2300: Duplicate identifier 'x'.
        ~
!!! error TS2300: Duplicate identifier 'x'.
    }